--- a/Improved Enigma/EnigmaWeb/EnigmaWeb.csproj
+++ b/Improved Enigma/EnigmaWeb/EnigmaWeb.csproj
@@ -53,7 +53,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Improved Enigma">
-      <HintPath>..\Improved Enigma\bin\Debug\Improved Enigma.dll</HintPath>
+      <HintPath>.\Improved Enigma.dll</HintPath>
+    </Reference>
+    <Reference Include="MathNet.Numerics, Version=3.19.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.19.0\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
