--- a/Improved Enigma/TestApp/TestApp.csproj
+++ b/Improved Enigma/TestApp/TestApp.csproj
@@ -33,8 +33,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DaxNEATCore">
+      <HintPath>.\DaxNEATCore.dll</HintPath>
+    </Reference>
     <Reference Include="Improved Enigma">
-      <HintPath>..\Improved Enigma\bin\Debug\Improved Enigma.dll</HintPath>
+      <HintPath>.\Improved Enigma.dll</HintPath>
+    </Reference>
+    <Reference Include="MathNet.Numerics, Version=3.19.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.19.0\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Excel\original.csv" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
